@@ -37,6 +37,7 @@ import org.ode4j.ode.DGeom.DNearCallback;
 
 import static org.ode4j.cpp.OdeCpp.*;
 import static org.ode4j.drawstuff.DrawStuff.*;
+import static org.ode4j.ode.OdeMath.*;
 
 
 /**
