@@ -48,10 +48,10 @@ import org.ode4j.ode.DGeom.DNearCallback;
 
 import static org.cpp4j.C_All.*;
 import static org.ode4j.cpp.OdeCpp.*;
-import static org.ode4j.cpp.OdeCppMath.*;
 import static org.ode4j.drawstuff.DrawStuff.*;
 import static org.ode4j.democpp.BunnyGeom.*;
 import static org.ode4j.democpp.ConvexBunnyGeom.*;
+import static org.ode4j.ode.OdeMath.*;
 
 
 public class DemoMovingConvex extends dsFunctions {
